# SalesFucker

./: .env.example  .gitignore  .gitlab-ci.yml  DEPLOYMENT.md  Makefile  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.mas.yml  docker-compose.yml  example_complete_prompt_implementation.py  example_prompt_usage.py  main.py  prompt_implementation_guide.py  pyproject.toml  test_prompt_integration.py  test_service_auth.py  validate_system.py
api/: .dockerignore  .env.example  AGENTS.md  Dockerfile  RAG_analysis.md  __init__.py  entrypoint.sh  exceptions.py  main.py  pyproject.toml  temporal-worker.py  tenant_manager.py
api/config/: __init__.py  app.py  models.yaml  rag_config.py
api/config/deploy/: __init__.py
api/config/module/: __init__.py  intent_config.py  rag_config.py
api/config/service/: __init__.py  awakening_config.py  provider.py  temporal_config.py  tracer.py
api/config/storage/: __init__.py  conversation_config.py  elasticsearch_config.py  milvus_config.py  redis_config.py
api/controller/: __init__.py  dependencies.py
api/controller/inner/: __init__.py  completion.py
api/controller/middleware/: tenant_isolation.py
api/controller/workspace/: __init__.py
api/controllers/: __init__.py  conversation_error_code.py  dependencies.py  exceptions.py
api/controllers/console/: __init__.py  error.py  (+3 more)
api/core/: __init__.py  entities.py
api/data/: analysis_prompts.yaml  models.yaml  social_media_prompt.yaml
api/dependencies/: agents.py  assistant_manager.py  devices.py  orchestrator.py  request_context.py  tenant_manager.py
api/endpoints/: __init__.py  agents.py  assistants.py  conversations.py  health.py  llm_management.py  multimodal.py  prompts.py  service_auth.py  tenant.py  test.py
api/handlers/: __init__.py  agent_handler.py  assistant_handler.py  conversation_handler.py  llm_handler.py  multimodal_handler.py  prompt_handler.py  prompts_handler.py  tenant_handler.py
api/infra/: factory.py  lifecycle.py  registry.py
api/inner/: __init__.py  completion.py
api/legacy_api/: agents.py  multimodal.py  multimodal_handler.py  multimodal_schema.py
api/libs/: __init__.py  constants.py  factory.py  types.py
api/middleware/: __init__.py  jwt_middleware.py  rate_limiting.py  safety_interceptor.py  tenant_isolation.py
api/migrations/: alembic.ini  env.py
api/models/: __init__.py  assistant.py  conversation.py  create.sql  document.py  enums.py  prompts.py  tenant.py  workflow.py
api/repositories/: __init__.py  assistant_repo.py  document_repo.py  prompts_repo.py  tenant_repo.py  thread_repo.py  thread_repository.py  workflow_repo.py
api/schemas/: __init__.py  assistants.py  assistants_schema.py  console_err_code.py  console_error_code.py  conversation_error.py  conversation_error_code.py  conversation_schema.py  conversations.py  document_schema.py  exceptions.py  llm.py  marketing_schema.py  memory_schema.py  multimodal.py  prompts_schema.py  resp_code.py  responses.py  social_media_schema.py  tenant.py  tenant_schema.py  thread_schema.py  tmp_schema.py  trigger_schema.py  video_schema.py
api/scripts/: database.py  init_temporal.py  setup_awakening_schedule.py
api/services/: __init__.py  analysis_service.py  assets_service.py  assistant_service.py  audio_service.py  document_service.py  label_service.py  memory_service.py  moments_service.py  moments_service_extension.py  profile_service.py  prompts_dao.py  prompts_services.py  report_service.py  social_media_service.py  suggestion_service.py  tenant_service.py  thread_service.py  video_service.py  workflow_service.py
api/src/: __init__.py
api/test/: test_parallel_workflow.py
api/tests/: README.md  conftest.py
api/utils/: __init__.py  appointment_time_parser.py  dnd_helper.py  error_handling.py  external_client.py  llm_debug_wrapper.py  logger_utils.py  response_parser.py  status_mixin.py  time_utils.py  token_manager.py  tracer_client.py  tracer_examples.py  validation.py  yaml_loader.py
api/workspace/: __init__.py
(+801 files in other folders)
