[project]
name = "mas-v0.2"
version = "0.1.0"
description = "Multi-Agent System for Digital Marketing"
authors = [
    {name = "HuanMu Team", email = "consumerclone@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "elasticsearch>=9.0.2",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langgraph>=0.5.4",
    "openai>=1.97.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "isort>=5.14.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
