[project]
name = "mas"
version = "0.2.3"
description = "Multi-Agent System for Digital Marketing"
authors = [
    {name = "HuanMu Team", email = "consumerclone@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "anthropic>=0.71.0",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "cryptography>=46.0.3",
    "dashscope>=1.25.1",
    "elasticsearch>=9.1.0",
    "fastapi>=0.116.1",
    "google-genai>=1.30.0",
    "greenlet>=3.2.4",
    "jinja2>=3.1.6",
    "langfuse>=3.3.1",
    "langgraph>=1.0.1",
    "msgpack>=1.1.1",
    "openai>=2.6.1",
    "openrouter>=0.1.1",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymilvus>=2.6.2",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.43",
    "temporalio>=1.18.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
